# pything_event

./: .gitignore  README.md  conftest.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytests.ini
common/: models.py  services.py  types.py  views.py
config/: settings.py  urls.py
events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_created_at_alter_event_updated_at.py
events/tests/: conftest.py  factories.py  test_models.py  test_serializers.py  test_views.py
locations/: admin.py  apis.py  models.py  selectors.py  services.py  urls.py
locations/migrations/: 0001_initial.py
locations/tests/: conftest.py  factories.py  test_apis.py  test_services.py
presentations/: admin.py  forms.py  models.py  serializers.py  urls.py  viewsets.py
presentations/migrations/: 0001_initial.py
presentations/tests/: factories.py  test_models.py  test_serializers.py  test_viewsets.py
static/css/: globals.css  tailwind.css
templates/: about.html  base.html  events.html  footer.html  home.html  login.html  mypage.html  navbar.html  people.html  posts.html  presentation_detail.html  presentation_form.html  presentations.html
users/: admin.py  apis.py  app.py  auth_apis.py  models.py  selectors.py  services.py  urls.py
users/migrations/: 0001_initial.py  0002_remove_user_name_alter_user_username.py
users/tests/: conftest.py  factories.py  test_apis.py  test_auth_apis.py  test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
